Name:           FTGL
Version:        1.333
Cabal-Version:  >= 1.8
License:        BSD3
License-File:   LICENSE
Author:         J.R. Heard, HIROKI,HATTORI <seagull.kamome@gmail.com>
Maintainer:     HIROKI,HATTORI <seagull.kamome@gmail.com>
Category:       Graphics
Description:    
  A Haskell binding for the portable TrueType to OpenGL font rendering library FTGL.
  This package provides OpenGL with polygonal, texture mapped, and extruded fonts using
  Freetype2 and any truetype font. 
Synopsis:       Portable TrueType font rendering for OpenGL using the Freetype2 library
Build-Type:     Simple

source-repository head
   type: git
   location: git@github.com:seagull-kamome/haskell-FTGL.git

Library
   Build-Depends: base >= 4.6 && <4.7
   Exposed-Modules:
      Graphics.Rendering.FTGL
   extra-libraries: ftgl

Executable ex1
   Build-Depends: base >= 4.6 && <4.7, FTGL, OpenGL, GLFW-b
   main-is:     ex1.hs
   hs-source-dirs: examples
